@@ -1,3 +1,8 @@
+2006-04-14  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
+
+	* tests/ns_gifsize.test:
+	* tests/ns_jpegsize.test: Fixed to match new error messages
+
 2006-04-13  Vlad Seryakov  <seryakov@users.sf.net>
 
 	* nsd/tclcache.c: make sure the value is zero ended
